Add demo of toggle text

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -46,5 +46,22 @@
         <ui-switch switchColor="red"></ui-switch>
         <ui-switch switchColor="blue"></ui-switch>
     </p>
+
+    <h3>labelOn</h3>
+    <p>
+        <ui-switch checked labelOn="Yes"></ui-switch>
+        <ui-switch checked labelOn="Go!"></ui-switch>
+    </p>
+
+    <h3>labelOff</h3>
+    <p>
+        <ui-switch labelOff="No"></ui-switch>
+        <ui-switch labelOff="Off!"></ui-switch>
+    </p>
+
+    <h3>labelOn &amp;&amp; labelOff</h3>
+    <p>
+        <ui-switch checked labelOn="Yes" labelOff="No"></ui-switch>
+    </p>
   </div>
 </div>
